--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\DELL\AppData\Local\Temp\testng-eclipse--1394753305\testng-customsuite.xml</span>
+                    <span>C:\Users\DELL\AppData\Local\Temp\testng-eclipse-1640499746\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,6 +104,16 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="TestCase.MakeMyTripFlightSearch" class="method navigator-link" hash-for-method="MakeMyTripFlightSearchWithValidValues">MakeMyTripFlightSearchWithValidValues</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="TestCase.MakeMyTripFlightSearch" class="method navigator-link" hash-for-method="MakeMyTripFlightSearchWithValidValuesusingmultipledata(BLR, HYD, 25)">MakeMyTripFlightSearchWithValidValuesusingmultipledata(BLR, HYD, 25)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="TestCase.MakeMyTripFlightSearch" class="method navigator-link" hash-for-method="MakeMyTripFlightSearchWithValidValuesusingmultipledata(MAA, BLR, 30)">MakeMyTripFlightSearchWithValidValuesusingmultipledata(MAA, BLR, 30)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -138,6 +148,22 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
+                  <a name="MakeMyTripFlightSearchWithValidValuesusingmultipledata(BLR, HYD, 25)">
+                  </a> <!-- MakeMyTripFlightSearchWithValidValuesusingmultipledata(BLR, HYD, 25) -->
+                  <span class="method-name">MakeMyTripFlightSearchWithValidValuesusingmultipledata</span>
+                  <span class="parameters">(BLR,HYD,25)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="MakeMyTripFlightSearchWithValidValuesusingmultipledata(MAA, BLR, 30)">
+                  </a> <!-- MakeMyTripFlightSearchWithValidValuesusingmultipledata(MAA, BLR, 30) -->
+                  <span class="method-name">MakeMyTripFlightSearchWithValidValuesusingmultipledata</span>
+                  <span class="parameters">(MAA,BLR,30)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="MakeMyTripFlightSearchWithinValidValues">
                   </a> <!-- MakeMyTripFlightSearchWithinValidValues -->
                   <span class="method-name">MakeMyTripFlightSearchWithinValidValues</span>
@@ -148,7 +174,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\DELL\AppData\Local\Temp\testng-eclipse--1394753305\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\DELL\AppData\Local\Temp\testng-eclipse-1640499746\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -197,20 +223,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'MakeMyTripFlightSearchWithValidValues')
+data.setCell(0, 1, 'MakeMyTripFlightSearchWithValidValuesusingmultipledata')
 data.setCell(0, 2, 'TestCase.MakeMyTripFlightSearch')
-data.setCell(0, 3, 14);
+data.setCell(0, 3, 7647);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'MakeMyTripFlightSearchWithinValidValues')
+data.setCell(1, 1, 'MakeMyTripFlightSearchWithValidValuesusingmultipledata')
 data.setCell(1, 2, 'TestCase.MakeMyTripFlightSearch')
-data.setCell(1, 3, 0);
+data.setCell(1, 3, 7542);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'MakeMyTripFlightSearchWithValidValues')
+data.setCell(2, 2, 'TestCase.MakeMyTripFlightSearch')
+data.setCell(2, 3, 7500);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'MakeMyTripFlightSearchWithinValidValues')
+data.setCell(3, 2, 'TestCase.MakeMyTripFlightSearch')
+data.setCell(3, 3, 0);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 14 ms</span>
+              <span class="suite-total-time">Total running time: 22 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -243,27 +277,43 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-test before">
                 <span class="method-name">LaunchMakeMyTrip</span>
-                <span class="method-start">1463 ms</span>
+                <span class="method-start">1529 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">MakeMyTripFlightSearchWithValidValues</span>
-                <span class="method-start">4162 ms</span>
+                <span class="method-start">4580 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">WriteInReport([TestResult name=MakeMyTripFlightSearchWithValidValues status=SUCCESS method=MakeMyTripFlightSearch....)</span>
-                <span class="method-start">4179 ms</span>
+                <span class="method-start">12080 ms</span>
               </div> <!-- configuration-method after -->
+              <div class="test-method">
+                <span class="method-name">MakeMyTripFlightSearchWithValidValuesusingmultipledata(MAA, BLR, 30)</span>
+                <span class="method-start">22767 ms</span>
+              </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">WriteInReport([TestResult name=MakeMyTripFlightSearchWithinValidValues status=SUCCESS method=MakeMyTripFlightSearc...)</span>
-                <span class="method-start">14421 ms</span>
+                <span class="method-name">WriteInReport([TestResult name=MakeMyTripFlightSearchWithValidValuesusingmultipledata status=SUCCESS method=MakeMy...)</span>
+                <span class="method-start">30310 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="test-method">
+                <span class="method-name">MakeMyTripFlightSearchWithValidValuesusingmultipledata(BLR, HYD, 25)</span>
+                <span class="method-start">40399 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">WriteInReport([TestResult name=MakeMyTripFlightSearchWithValidValuesusingmultipledata status=SUCCESS method=MakeMy...)</span>
+                <span class="method-start">48047 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">MakeMyTripFlightSearchWithinValidValues</span>
-                <span class="method-start">14421 ms</span>
+                <span class="method-start">58158 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">WriteInReport([TestResult name=MakeMyTripFlightSearchWithinValidValues status=SUCCESS method=MakeMyTripFlightSearc...)</span>
+                <span class="method-start">58162 ms</span>
+              </div> <!-- configuration-method after -->
               <div class="configuration-suite after">
                 <span class="method-name">TearDown</span>
-                <span class="method-start">24686 ms</span>
+                <span class="method-start">68313 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
